# spectra_lexer

./: .gitignore  CHANGELOG.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
benchmarks/: __init__.py  __main__.py  bench.py  profilers.py  run.py  tests.py
doc/: rules_format.txt
spectra_lexer/: __init__.py  __main__.py  analysis.py  app.py  app_console.py  app_discord.py  app_http.py  app_index.py  app_json.py  app_plover.py  app_qt.py  base.py  batch.py  cmdline.py  codec.py  config.py  console.py  constants.py  control.py  discord.py  display.py  engine.py  file.py  gui.py  gui_engine.py  gui_ext.py  gui_http.py  gui_json.py  gui_none.py  gui_plover.py  gui_qt.py  gui_rest.py  io.py  keys.py  lexer.py  log.py  main_discord.py  main_http.py  main_index.py  main_qt.py  (+19 more)
spectra_lexer/app/: __init__.py  base.py  batch.py  engine.py  factory.py  gui.py  main.py  package.py  plover.py  plugin.py
spectra_lexer/assets/: 00_format.txt  00_special.cson  01_basic.cson  01_basic.json  02_complex.cson  02_complex.json  03_affixes.cson  03_affixes.json  03_orthography_sounds.cson  04_orthography_silent.cson  04_orthography_sounds.cson  04_orthography_sounds.json  05_affixes.cson  05_orthography_silent.cson  05_orthography_silent.json  06_inversions.cson  06_inversions.json  07_drops.cson  07_patterns.cson  07_patterns.json  08_blocks.cson  08_blocks.json  08_misc.cson  08_splits.cson  09_briefs.cson  09_briefs.json  10_letters.cson  10_letters.json  11_numbers.cson  11_numbers.json  12_symbols.cson  99_special.cson  board_defs.cson  board_defs.json  board_elems.cson  board_elems.xml  format.txt  key_layout.cson  key_layout.json  layout.json  (+1 more)
spectra_lexer/batch/: __init__.py  __main__.py  base.py  executor.py  parallel.py
spectra_lexer/board/: __init__.py  base.py  board.py  defs.py  element.py  factory.py  generator.py  layout.py  matcher.py  path.py  rule.py  svg.py  tfrm.py
spectra_lexer/cmdline/: __init__.py  base.py
spectra_lexer/config/: __init__.py  base.py  io.py  main.py  parser.py  qt.py  spec.py  type.py
spectra_lexer/console/: __init__.py  app.py  base.py  console.py  interpreter.py  main.py  qt.py  system.py
spectra_lexer/core/: __init__.py  __main__.py  app.py  base.py  batch.py  builder.py  cmdline.py  command.py  component.py  config.py  console.py  control.py  core.py  debug.py  engine.py  factory.py  group.py  io.py  main.py  parallel.py  rules.py  runtime.py  translations.py
spectra_lexer/debug/: __init__.py  base.py  container.py  data.py  factory.py  format.py  generated.py  iterable.py  resource.py
spectra_lexer/dict/: __init__.py  base.py  board.py  config.py  manager.py  rule_dict.py  rule_parser.py  rules.py  steno_dict.py  translations.py
spectra_lexer/discord/: __init__.py  backoff.py  client.py  event.py  gateway.py  http.py  image.py  logger.py  main.py  request.py
spectra_lexer/display/: __init__.py  base.py  cascaded_text.py  html.py
spectra_lexer/file/: __init__.py  base.py  cfg.py  codecs.py  decoder.py  io_path.py  json.py  parser.py  path.py  resource.py  xml.py
spectra_lexer/format/: cascaded_text.py
spectra_lexer/graph/: __init__.py  base.py  body.py  canvas.py  connectors.py  format.py  graph.py  layout.py  node.py
spectra_lexer/gui/: __init__.py  app.py  menu.py
spectra_lexer/gui_http/: __init__.py  app.py  base.py  dispatch.py  http.py  main.py  methods.py  response.py  server.py  tcp.py  view.py
spectra_lexer/gui_none/: __init__.py  console_main.py  index_main.py  main.py
spectra_lexer/gui_qt/: __init__.py  __main__.py  app.py  base.py  board.py  console.py  dispatch.py  display.py  engine.py  file.py  formatted_text_widget.py  graph.py  gui.py  icon.py  input_list_widget.py  input_widget.py  input_widget.ui  main.py  main_widget.py  main_widget.ui  main_window.py  main_window.ui  menu.py  output_board_widget.py  output_text_widget.py  output_widget.py  output_widget.ui  plover.py  plover_dialog.py  plover_dialog.ui  plover_window.py  search.py  search_list_widget.py  status.py  steno_board_widget.py  svg.py  system.py  text_graph_widget.py  view.py  widgets.py  (+2 more)
spectra_lexer/http/: __init__.py  connect.py  json.py  methods.py  request.py  response.py  server.py  service.py  status.py  tcp.py
spectra_lexer/http_public/: index.css  index.html  index.js
spectra_lexer/interactive/: __init__.py  base.py  svg.py
spectra_lexer/lexer/: __init__.py  base.py  composite.py  dict.py  exact.py  keys.py  lexer.py  match.py  parallel.py  parser.py  prefix.py  results.py  rules.py  special.py
spectra_lexer/main/: __init__.py  batch.py  gui.py  plugin.py
spectra_lexer/objtree/: __init__.py  container.py  data.py  factory.py  format.py  qt.py  (+5 more)
test/: __init__.py  base.py  bench.py  test_all.py  test_main.py  test_plover.py  test_search.py
(+513 files in other folders)
