[metadata]
name = spectra_lexer
version = 3.0.0
description = Stroke and rule analyzer for stenography
long_description = file: README.rst
author = fourshade
author_email = synnethrelmn@yahoo.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/fourshade/spectra_lexer
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Text Processing :: Linguistic
keywords = plover plover_plugin

[options]
include_package_data = True
zip_safe = True
install_requires =
    appdirs>=1.4.3
    PyQt5>=5.5
tests_require =
    pytest
packages =
    spectra_lexer
    spectra_lexer.core
    spectra_lexer.core.file
    spectra_lexer.core.file.codecs
    spectra_lexer.gui_qt
    spectra_lexer.gui_qt.board
    spectra_lexer.gui_qt.dialog
    spectra_lexer.gui_qt.search
    spectra_lexer.gui_qt.text
    spectra_lexer.plover
    spectra_lexer.steno
    spectra_lexer.steno.board
    spectra_lexer.steno.data
    spectra_lexer.steno.graph
    spectra_lexer.steno.graph.formatter
    spectra_lexer.steno.graph.generator
    spectra_lexer.steno.lexer
    spectra_lexer.steno.search
    spectra_lexer.tools
    spectra_lexer.tools.console

[options.entry_points]
console_scripts =
    spectra_lexer = spectra_lexer.__main__:main
plover.gui.qt.tool =
    lexer_plugin = spectra_lexer.__main__:Spectra.plugin
