[metadata]
name = spectra_lexer
version = 11.1.0
description = Stroke and rule analyzer for stenography
long_description = file: README.rst
author = fourshade
author_email = synnethrelmn@yahoo.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/fourshade/spectra_lexer
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Text Processing :: Linguistic
keywords = plover plover_plugin

[options]
include_package_data = True
python_requires = >=3.6
zip_safe = True
install_requires =
    PyQt5>=5.5
tests_require =
    pytest
packages = find:

[options.packages.find]
include = spectra_lexer*

[options.entry_points]
console_scripts =
    spectra_lexer = spectra_lexer.__main__:main
plover.gui.qt.tool =
    lexer_plugin = spectra_lexer.app_plover:PloverPlugin
